NotReadableError: The I/O read operation failed for large files of size 4G+ https://bugs.webkit.org/show_bug.cgi?id=272600 rdar://126863800

Reviewed by Alex Christensen.

FileReaderLoader is limiting the size of data that can be read.
This restriction is not needed when reading data via a ReadableStream.
We stop allocating a buffer in FileReaderLoader for ReadType::ReadAsBinaryChunks as this is unnecessary.
Instead, we let the client store the buffers.

Manually tested for big files.

* Source/WebCore/fileapi/FileReaderLoader.cpp:
(WebCore::FileReaderLoader::didReceiveResponse):
* Source/WebCore/fileapi/FileReaderLoader.h:

Canonical link: https://commits.webkit.org/278457@main